raw-kubernetes/resources/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: op5-kube-frontend
  labels:
    block5: optional
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      block5: optional
      app: frontend
  template:
    metadata:
      labels:
        block5: optional
        app: frontend
    spec:
      containers:
      - name: frontend
        image: quay.io/drsylent/cubix/block5v2/optional-frontend:springboot3
        ports:
        - containerPort: 8080
          name: web
