raw-kubernetes/resources/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  namespace: op5-kube-frontend
  labels:
    block5: optional
    app: frontend
spec:
  rules:
    - host: application.cubix.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 8080
